<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_location_switch"
        android:title="@string/pref_location_switch"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="15"
        android:inputType="textCapWords"
        android:key="@string/key_search_radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_radius"/>
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_choix_style_carte"
        android:entryValues="@array/pref_choix_style_carte_values"
        android:key="@string/key_choix_style_carte"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_style_carte"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
