<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="iut_bm_lp.projet_mountaincompanion_v1.views.Preferences.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="iut_bm_lp.projet_mountaincompanion_v1.views.Preferences.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="iut_bm_lp.projet_mountaincompanion_v1.views.Preferences.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    <header
        android:fragment="iut_bm_lp.projet_mountaincompanion_v1.views.Preferences.SettingsActivity$LanguePreferenceFragment"
        android:icon="@drawable/ic_translate"
        android:title="Idioma"/>

</preference-headers>
